# galaxia

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TASKS.md  flake.nix
assets/rawish/: oak-tree-300x300.xcf
assets/rawish/bolt-icon-buttons/bolt-icons-buttons/: license.txt  readme.txt  support.url
assets/rawish/fruits/: README
logs/: 2026-06-20.md  2026-06-21.md  2026-06-22.md  2026-06-23.md  2026-06-24.md  2026-06-26.md  2026-06-28.md  2026-06-29.md
references/: code-style.md  glossary.md  item-model.md  land-minigame.md  life-minigame.md  local-dev.md  repo-layout.md  tech-stack.md
skills/: add-minigame.md
src/: area.rs  camera.rs  collision.rs  constant_velocity.rs  main.rs  mouse.rs  player.rs  random.rs  resource.rs  toggleable.rs
src/entities/: item.rs  minigame.rs  mod.rs  player.rs  resource.rs
src/entities/minigames/: ball_breaker.rs  battery.rs  button.rs  chest.rs  common.rs  draw.rs  foundry.rs  land.rs  life.rs  mod.rs  primordial_ocean.rs  rune.rs  tree.rs
src/libs/: area.rs  camera.rs  constant_velocity.rs  images.rs  inventory.rs  misc.rs  mod.rs  mouse.rs  ready.rs
src/minigames/: ball_breaker.rs  button.rs  common.rs  mod.rs  primordial_ocean.rs  tree.rs
tasks/: board.md
