[package]
name = "test_project"
version = "0.1.0"
edition = "2021"

[dependencies]
array2d = "0.3.2"
bevy = "0.14.1"
bevy_ecs_tilemap = "0.14.0"
bevy_rapier2d = "0.27.0"
grid = "0.14.0"
libnoise = "1.1.2"
ndarray = "0.16.1"
perlin_noise = "1.0.1"
rapier2d = "0.22.0"
serde = "1.0.210"
serde_json = "1.0.128"
wyrand = "0.2.1"

[profile.dev]
opt-level = 3
[profile.release]
opt-level = 3
