[package]
name = "galaxia"
version = "0.1.0"
edition = "2021"

[dependencies]
array2d = "0.3.2"
bevy = "0.14.1"
bevy_ecs_tilemap = "0.14.0"
bevy_framepace = "0.17.1"
bevy_prototype_lyon = "0.12.0"
bevy_rapier2d = "0.27.0"
grid = "0.14.0"
image = "0.25.5"
imageproc = "0.25.0"
int-enum = "1.1.2"
libnoise = "1.1.2"
ndarray = "0.16.1"
once_cell = "1.20.2"
perlin_noise = "1.0.1"
rapier2d = "0.22.0"
serde = "1.0.210"
serde_json = "1.0.128"
wyrand = "0.2.1"

# `too_many_arguments` fires constantly on Bevy systems (many Query/Res
# params), where a high parameter count is normal and idiomatic. Allow it
# crate-wide rather than scattering `#[allow]` or contorting systems.
[lints.clippy]
too_many_arguments = "allow"

# Our own crate compiles at a low opt-level for fast incremental builds.
[profile.dev]
opt-level = 1

# Dependencies (Bevy, physics, etc.) stay fully optimized so the game still
# runs at a playable speed in dev.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
